--- a/react/package.json
+++ b/react/package.json
@@ -42,5 +42,13 @@
       "last 1 safari version"
     ]
   },
-  "proxy": "http://127.0.0.1:5000"
+  "proxy": "http://127.0.0.1:5000",
+  "devDependencies": {
+    "@types/jest": "^29.5.5",
+    "@types/node": "^20.8.3",
+    "@types/react": "^18.2.25",
+    "@types/react-dom": "^18.2.11",
+    "sass": "^1.69.0",
+    "typescript": "^5.2.2"
+  }
 }
