--- a/src/requirements.txt
+++ b/src/requirements.txt
@@ -1,5 +1,8 @@
 Flask==2.2.2
+Flask_Cors==4.0.0
 flask_session==0.5.0
-langchain==0.0.292
+langchain==0.0.313
+pydantic==1.10.0
 python-dotenv==1.0.0
 spotipy==2.23.0
+openai==0.28.0
