--- a/packages/frontend/react/package.json
+++ b/packages/frontend/react/package.json
@@ -45,7 +45,7 @@
       "last 1 safari version"
     ]
   },
-  "proxy": "https://groovify-backend.onrender.com",
+  "proxy": "https://groovify-backend.onrender.com/",
   "devDependencies": {
     "@types/jest": "^29.5.5",
     "@types/node": "^20.8.3",
