--- a/packages/frontend/react/package.json
+++ b/packages/frontend/react/package.json
@@ -19,10 +19,11 @@
     "webfontloader": "^1.6.28"
   },
   "scripts": {
+    
     "start": "concurrently \"yarn start-flask\" \"yarn wait-on-api && yarn start-react\"",
-    "start-flask": "cd ../../backend/src && pip install -r requirements.txt && flask run",
+    "start-flask": "cd ../../backend/src && pip install -r requirements.txt && gunicorn -w 4 -b 0.0.0.0 app:app --timeout 900",
     "start-react": "react-scripts start",
-    "wait-on-api": "wait-on http://127.0.0.1:5000/",
+    "wait-on-api": "wait-on http://localhost:8000/",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
